# x-remove

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  index.html  pyproject.toml
scripts/: build.sh  compose.sh  setup.sh  test-server.sh
src/x_remove/: api_details_refresher.py  settings.py
templates/: index.html
tf/: ecr.tf  iam.tf  main.tf
