[project]
name = "x-remove"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "fake-useragent>=1.5.1",
    "x-remove",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_remove"]

[tool.uv.sources]
x-remove = { workspace = true }
